# shopping-tem-data

./: .gitignore  README.md  alembic.ini  pyproject.toml  ruff.toml  testing.py
alembic/: env.py
alembic/versions/: 2023_06_24_1443-a18d7122bdc2_create_shoppings_table.py  2023_06_25_0856-2bccf1bcc1cc_create_shopping_phones_table.py  2023_07_04_1849-e72e9042a7ab_create_shopping_addresses_table.py  2023_07_04_1900-bedf0a3696e1_create_brands_table.py  2023_07_04_1904-f5180366cf9e_create_stores_table.py  2023_07_08_0446-031e3a621402_create_sectors_table.py  2023_07_08_0453-3887bce8c083_create_subsectors_table.py  2023_07_08_0508-ada775e88053_create_sectors_brands_table.py  2023_07_08_0512-bafc8af5b8ed_create_subsectors_brands_table.py
classes/: AlembicHelper.py
migrations/: env.py
migrations/versions/: 2023_06_24_1443-a18d7122bdc2_create_shoppings_table.py  2023_06_25_0856-2bccf1bcc1cc_create_shopping_phones_table.py  2023_06_25_1530-9a8b063556cc_create_shopping_opening_hours.py  2023_07_04_0700-cde668d041d2_create_states_table.py  2023_07_04_0715-e661f1b28b09_create_cities_table.py  (+8 more)
models/: Base.py  Brand.py  Models.py  Sector.py  SectorBrand.py  Shopping.py  ShoppingAddress.py  ShoppingOpeningHour.py  ShoppingPhone.py  Store.py  StorePhone.py  Subsector.py  SubsectorBrand.py  __init__.py  city.py  sector_brand.py  shopping_address.py  shopping_opening_hour.py  shopping_phone.py  state.py  store_phone.py  subsector_brand.py
seeders/: city.py  sector_seeder.py  seeder.py  shopping.py  state.py  subsector.py
shopping_data/: __init__.py
